<resources>
    <string name="app_name">JobApp</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="zxing_hint">扫描二维码</string>
    <string name="company_title">公司信息</string>
    <string name="clean_search_history">清空搜索历史</string>
    <string name="et_search_hint">请输入职位或公司</string>
    <string name="cancel">取消</string>
    <string name="hot_search">热门搜索</string>

    <!--登录模块-->
    <string name="login_qq">QQ</string>
    <string name="login_weixin">微信</string>
    <string name="login_other">其他方式登录</string>
    <string name="login">登录</string>
    <string name="login_question_hint">登录遇到问题</string>
    <string name="password_hint">请输入密码</string>
    <string name="password">密　码：</string>
    <string name="username_hint">请输入用户名</string>
    <string name="username">用户名：</string>
    <string name="top_register">注册</string>
    <string name="email">E-mail：</string>
    <string name="email_hint">请输入邮箱</string>
    <string name="phone_hint">请输入手机号码</string>
    <string name="phone">手机号：</string>

    <string-array name="query_suggestions">
        <item>Android</item>
        <item>iOS</item>
        <item>SCALA</item>
        <item>Ruby</item>
        <item>JavaScript</item>
    </string-array>
</resources>
