<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <RelativeLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/custom_bar_height"
        android:background="@color/colorPrimary"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:clickable="true"
            android:gravity="center_vertical"
            android:text="欢迎登录"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/lg_text_size" />

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:gravity="center_vertical"
            android:text="@string/top_register"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/lg_text_size" />
    </RelativeLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/user_default"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@+id/top_bar"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/custom_padding"
        android:layout_marginTop="@dimen/custom_padding"
        android:scaleType="centerCrop"
        android:src="@drawable/icon_user_default" />

    <LinearLayout
        android:id="@+id/layout_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/user_default"
        android:orientation="vertical"
        android:padding="@dimen/custom_padding">

        <LinearLayout style="@style/layout_style">

            <TextView
                style="@style/TextBlack"
                android:text="@string/username" />

            <EditText
                android:id="@+id/et_username"
                style="@style/edit_style"
                android:hint="@string/username_hint"
                android:maxLength="20" />
        </LinearLayout>

        <LinearLayout style="@style/layout_style">

            <TextView
                style="@style/TextBlack"
                android:text="@string/password" />

            <EditText
                android:id="@+id/et_password"
                style="@style/edit_style"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:maxLength="16" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/layout_middle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_input">

        <CheckBox
            android:id="@+id/cb_remember"
            android:layout_width="26dp"
            android:layout_height="25dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:background="@drawable/selector_checkbox"
            android:button="@null"
            android:checked="false" />

        <TextView
            style="@style/TextGrey"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dp"
            android:layout_toRightOf="@+id/cb_remember"
            android:text="记住密码" />

        <TextView
            android:id="@+id/tvLogin_Question"
            style="@style/TextBlack"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:padding="@dimen/custom_padding"
            android:text="@string/login_question_hint"
            android:textColor="#576b95" />
    </RelativeLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_middle"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_selector"
        android:enabled="false"
        android:text="@string/login"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/lg_text_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/layout_bottom_image"
        android:paddingLeft="@dimen/lg_padding"
        android:paddingRight="@dimen/lg_padding">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="#d8d8d8" />

        <TextView
            style="@style/TextXsGrey"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/login_other" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="#d8d8d8" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_bottom_image"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_above="@+id/layout_bottom_tv">

        <ImageView
            android:id="@+id/imgWeixin"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:clickable="true"
            android:contentDescription="@string/login_weixin"
            android:src="@drawable/selector_weixin" />

        <ImageView
            android:id="@+id/imgAlipay"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:clickable="true"
            android:contentDescription="@string/login_qq"
            android:src="@drawable/selector_qq" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_bottom_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/tv_weixin"
            style="@style/TextGrey"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/login_weixin" />

        <TextView
            android:id="@+id/tv_alipay"
            style="@style/TextGrey"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/login_qq" />
    </LinearLayout>

</RelativeLayout>